--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,8 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-rc01'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
