--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        debug {
+            storeFile file('debug')
+            storePassword 'debug'
+            keyAlias 'debug'
+            keyPassword 'debug'
+        }
+    }
     compileSdk 33
 
     defaultConfig {
